...
      appBar: AppBar(
        backgroundColor: Colors.transparent,
        elevation: 0,
        iconTheme: const IconThemeData(color: Color(0xFF1A2A4A)),
        centerTitle: true,
        title: const Text(
          "Méditation 2 min",
          style: TextStyle(
            color: Color(0xFF1A2A4A),
            fontWeight: FontWeight.w600,
          ),
        ),
      ),
...
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              const SizedBox(height: 30),

              const Text(
                "Relaxation guidée",
                style: TextStyle(
                  fontSize: 20,
                  fontWeight: FontWeight.w700,
                  color: Color(0xFF1A2A4A),
                ),
              ),
...
